--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "~2.4.1",
     "redis": "~0.7.1",
     "underscore": "~1.2.3",
-    "directory": "0.0.6"
+    "directory": "0.0.6",
+    "vows": "0.6.0"
   },
   "devDependencies": {}
 }
