--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "directory": "0.0.x",
     "bcrypt": "~0.5.0"
   },
-  "devDependencies": { }
+  "devDependencies": {
+    "mocha": "~0.10.0"
+  }
 }
