--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "test": "mocha -R spec"
   },
   "engines": {
-    "node": "*"
+    "node": "0.x"
   },
   "dependencies": {
-    "underscore": "~1.2.3",
     "directory": "0.0.x",
-    "bcrypt": "~0.5.0",
-    "natural": "0.0.63"
+    "bcrypt": "~0.5.0"
   },
   "devDependencies": {
     "mocha": "~0.10.0",
