--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "redis": ">= 0.7.1"
   },
   "dependencies" : {
-    "directory": "0.0.x", 
+    "directory": "~0.1.0", 
     "mongoose": "~3.5.8"
   },
   "devDependencies" : {
