--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name" : "mongoose-troop",
-  "version" : "0.0.8",
-  "description" : "a collection of plugins for mongoose",
-  "main" : "index.js",
-  "bin" : {},
-  "directories" : {
-    "test" : "test"
+  "name": "mongoose-troop",
+  "version": "0.0.8",
+  "description": "a collection of plugins for mongoose",
+  "main": "index.js",
+  "bin": {},
+  "directories": {
+    "test": "test"
   },
-  "scripts" : {
+  "scripts": {
     "test": "make test && make clean"
   },
-  "optionalDependencies" : {
+  "optionalDependencies": {
     "bcrypt": "~0.7.0",
     "redis": ">= 0.7.1"
   },
-  "dependencies" : {
-    "directory": "0.0.x", 
+  "dependencies": {
+    "directory": "0.0.x",
     "mongoose": "~3.5.8"
   },
-  "devDependencies" : {
-    "mocha": "~1.8.2"
+  "devDependencies": {
+    "mocha": "~1.8.2",
+    "mongodb": "~1.3.19"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "git://github.com/tblobaum/mongoose-troop.git"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tblobaum/mongoose-troop.git"
   },
-  "homepage" : "https://github.com/tblobaum/mongoose-troop",
-  "keywords" : [
+  "homepage": "https://github.com/tblobaum/mongoose-troop",
+  "keywords": [
     "mongoose",
     "troop",
     "acl",
@@ -40,20 +41,20 @@
     "merge",
     "getdbrefs"
   ],
-  "author" : {
-    "name" : "Thomas Blobaum",
-    "email" : "tblobaum@gmail.com",
-    "url" : "https://github.com/tblobaum/"
+  "author": {
+    "name": "Thomas Blobaum",
+    "email": "tblobaum@gmail.com",
+    "url": "https://github.com/tblobaum/"
   },
   "contributors": [
-  { 
-    "name": "Profulla Sadangi", 
-    "url": "https://github.com/butu5/"
-  }, 
-  {
-    "name": "Beau Sorensen", 
-    "url": "https://github.com/sorensen/"
-  }
+    {
+      "name": "Profulla Sadangi",
+      "url": "https://github.com/butu5/"
+    },
+    {
+      "name": "Beau Sorensen",
+      "url": "https://github.com/sorensen/"
+    }
   ],
-  "license" : "MIT"
+  "license": "MIT"
 }
